force-app/main/default/objects/LATAM__c/LATAM__c.object-meta.xml
<CustomObject>
    <label>LATAM</label>
    <nameField>
        <label>LATAM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LATAM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>