force-app/main/default/objects/LATAM__c/fields/A_E_Redlines_A__c.field-meta.xml
<CustomField>
    <fullName>A_E_Redlines_A__c</fullName>
    <label>A&amp;E Redlines (A)</label>
    <type>Date</type>
</CustomField>