force-app/main/default/objects/LATAM__c/fields/A_Es_F__c.field-meta.xml
<CustomField>
    <fullName>A_Es_F__c</fullName>
    <label>A&amp;Es (F)</label>
    <type>Date</type>
</CustomField>