force-app/main/default/objects/LATAM__c/fields/Activity_End_A__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_A__c</fullName>
    <label>Activity End (A)</label>
    <type>Date</type>
</CustomField>