force-app/main/default/objects/LATAM__c/fields/Activity_End_F__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_F__c</fullName>
    <label>Activity End (F)</label>
    <type>Date</type>
</CustomField>