force-app/main/default/objects/LATAM__c/fields/Activity_Start_A__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_A__c</fullName>
    <label>Activity Start (A)</label>
    <type>Date</type>
</CustomField>