force-app/main/default/objects/LATAM__c/fields/Activity_Start_F__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_F__c</fullName>
    <label>Activity Start (F)</label>
    <type>Date</type>
</CustomField>