force-app/main/default/objects/LATAM__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caminos</fullName>
            </value>
            <value>
                <fullName>Candados o Chapas</fullName>
            </value>
            <value>
                <fullName>Cimientos y Estructuras</fullName>
            </value>
            <value>
                <fullName>Estructura</fullName>
            </value>
            <value>
                <fullName>Impermeabilizacion</fullName>
            </value>
            <value>
                <fullName>Limpieza General y/o Deshierbe</fullName>
            </value>
            <value>
                <fullName>Malla Ciclónica Perimetral o Bardas</fullName>
            </value>
            <value>
                <fullName>Mantenimiento Primer Vuelta</fullName>
            </value>
            <value>
                <fullName>Mantenimiento Segunda Vuelta</fullName>
            </value>
            <value>
                <fullName>Porton</fullName>
            </value>
            <value>
                <fullName>Red Line</fullName>
            </value>
            <value>
                <fullName>Reparacion de Luces</fullName>
            </value>
            <value>
                <fullName>Sistema de Tierra</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Sitio General</fullName>
            </value>
            <value>
                <fullName>Torres y Estructuras Metálicas</fullName>
            </value>
            <value>
                <fullName>Vandalismo</fullName>
            </value>
            <value>
                <fullName>Gestoria</fullName>
            </value>
            <value>
                <fullName>Tramites</fullName>
            </value>
            <value>
                <fullName>Reparaciones de Energia</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Consumo de Energia</fullName>
            </value>
            <value>
                <fullName>Instalaciones</fullName>
            </value>
            <value>
                <fullName>Mantenimiento Preventivo</fullName>
            </value>
            <value>
                <fullName>Mantenimiento Correctivo</fullName>
            </value>
            <value>
                <fullName>Emergencia</fullName>
            </value>
            <value>
                <fullName>Construccion Obra Civil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>