force-app/main/default/objects/LATAM__c/fields/Additional_Amount_Quote__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_Quote__c</fullName>
    <label>Additional Amount Quote</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>