force-app/main/default/objects/LATAM__c/fields/Additional_Purchase_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Purchase_Order_Date__c</fullName>
    <label>Additional Purchase Order Date</label>
    <type>Date</type>
</CustomField>