force-app/main/default/objects/LATAM__c/fields/Additional_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Purchase_Order_Number__c</fullName>
    <label>Additional Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>