force-app/main/default/objects/LATAM__c/fields/Alineamiento_y_No_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Alineamiento_y_No_Oficial__c</fullName>
    <label>Alineamiento y No. Oficial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summit Wireless Infrastructure de Mexico S de RL de CV</fullName>
            </value>
            <value>
                <fullName>NMS Towers de Mexico S de RL de CV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>