force-app/main/default/objects/LATAM__c/fields/Alineamiento_y_No_Oficial_A__c.field-meta.xml
<CustomField>
    <fullName>Alineamiento_y_No_Oficial_A__c</fullName>
    <label>Alineamiento y No. Oficial (A)</label>
    <type>Date</type>
</CustomField>