force-app/main/default/objects/LATAM__c/fields/Alineamiento_y_No_Oficial_F__c.field-meta.xml
<CustomField>
    <fullName>Alineamiento_y_No_Oficial_F__c</fullName>
    <label>Alineamiento y No. Oficial (F)</label>
    <type>Date</type>
</CustomField>