force-app/main/default/objects/LATAM__c/fields/Annex_A_complete_A__c.field-meta.xml
<CustomField>
    <fullName>Annex_A_complete_A__c</fullName>
    <label>Annex A complete (A)</label>
    <type>Date</type>
</CustomField>