force-app/main/default/objects/LATAM__c/fields/Annex_A_complete_F__c.field-meta.xml
<CustomField>
    <fullName>Annex_A_complete_F__c</fullName>
    <label>Annex A complete (F)</label>
    <type>Date</type>
</CustomField>