force-app/main/default/objects/LATAM__c/fields/Application_Date_Coordination__c.field-meta.xml
<CustomField>
    <fullName>Application_Date_Coordination__c</fullName>
    <label>Application Date Coordination</label>
    <type>Date</type>
</CustomField>