force-app/main/default/objects/LATAM__c/fields/Candidate_negotiation_closing_A__c.field-meta.xml
<CustomField>
    <fullName>Candidate_negotiation_closing_A__c</fullName>
    <label>Candidate negotiation &amp; closing (A)</label>
    <type>Date</type>
</CustomField>