force-app/main/default/objects/LATAM__c/fields/Candidate_negotiation_closing_F__c.field-meta.xml
<CustomField>
    <fullName>Candidate_negotiation_closing_F__c</fullName>
    <label>Candidate negotiation &amp; closing (F)</label>
    <type>Date</type>
</CustomField>