force-app/main/default/objects/LATAM__c/fields/Candidates_received_CVRs_F__c.field-meta.xml
<CustomField>
    <fullName>Candidates_received_CVRs_F__c</fullName>
    <label>Candidates received (CVRs) (F)</label>
    <type>Date</type>
</CustomField>