force-app/main/default/objects/LATAM__c/fields/Candidates_sent_to_client_A__c.field-meta.xml
<CustomField>
    <fullName>Candidates_sent_to_client_A__c</fullName>
    <label>Candidates sent to client (A)</label>
    <type>Date</type>
</CustomField>