force-app/main/default/objects/LATAM__c/fields/Caravan_with_client_if_necessary_A__c.field-meta.xml
<CustomField>
    <fullName>Caravan_with_client_if_necessary_A__c</fullName>
    <label>Caravan with client (if necessary) (A)</label>
    <type>Date</type>
</CustomField>