force-app/main/default/objects/LATAM__c/fields/Caravan_with_client_if_necessary_F__c.field-meta.xml
<CustomField>
    <fullName>Caravan_with_client_if_necessary_F__c</fullName>
    <label>Caravan with client (if necessary) (F)</label>
    <type>Date</type>
</CustomField>