force-app/main/default/objects/LATAM__c/fields/Civil_Works_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Civil_Works_Ready_A__c</fullName>
    <label>Civil Works Ready (A)</label>
    <type>Date</type>
</CustomField>