force-app/main/default/objects/LATAM__c/fields/Client_Assignment_A__c.field-meta.xml
<CustomField>
    <fullName>Client_Assignment_A__c</fullName>
    <label>Client Assignment (A)</label>
    <type>Date</type>
</CustomField>