force-app/main/default/objects/LATAM__c/fields/Client_Assignment_F__c.field-meta.xml
<CustomField>
    <fullName>Client_Assignment_F__c</fullName>
    <label>Client Assignment (F)</label>
    <type>Date</type>
</CustomField>