force-app/main/default/objects/LATAM__c/fields/Client_Ground_Rent_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Client_Ground_Rent_Validation_F__c</fullName>
    <label>Client Ground Rent Validation (F)</label>
    <type>Date</type>
</CustomField>