force-app/main/default/objects/LATAM__c/fields/Client_Punchlist_A__c.field-meta.xml
<CustomField>
    <fullName>Client_Punchlist_A__c</fullName>
    <label>Client Punchlist (A)</label>
    <type>Date</type>
</CustomField>