force-app/main/default/objects/LATAM__c/fields/Client_Punchlist_F__c.field-meta.xml
<CustomField>
    <fullName>Client_Punchlist_F__c</fullName>
    <label>Client Punchlist (F)</label>
    <type>Date</type>
</CustomField>