force-app/main/default/objects/LATAM__c/fields/Client_RF_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Client_RF_Validation_F__c</fullName>
    <label>Client RF Validation (F)</label>
    <type>Date</type>
</CustomField>