force-app/main/default/objects/LATAM__c/fields/Client_Select_Site_PreFactibility_Rq_A__c.field-meta.xml
<CustomField>
    <fullName>Client_Select_Site_PreFactibility_Rq_A__c</fullName>
    <label>Client Select Site PreFactibility Rq (A)</label>
    <type>Date</type>
</CustomField>