force-app/main/default/objects/LATAM__c/fields/Client_Select_Site_PreFactibility_Rq_F__c.field-meta.xml
<CustomField>
    <fullName>Client_Select_Site_PreFactibility_Rq_F__c</fullName>
    <label>Client Select Site PreFactibility Rq (F)</label>
    <type>Date</type>
</CustomField>