force-app/main/default/objects/LATAM__c/fields/Client_Split_Ground_Rent_Validation_A__c.field-meta.xml
<CustomField>
    <fullName>Client_Split_Ground_Rent_Validation_A__c</fullName>
    <label>Client Split Ground Rent Validation (A)</label>
    <type>Date</type>
</CustomField>