force-app/main/default/objects/LATAM__c/fields/Client_Tx_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Client_Tx_Validation_F__c</fullName>
    <label>Client Tx Validation (F)</label>
    <type>Date</type>
</CustomField>