force-app/main/default/objects/LATAM__c/fields/Client_validation_A__c.field-meta.xml
<CustomField>
    <fullName>Client_validation_A__c</fullName>
    <label>Client validation (A)</label>
    <type>Date</type>
</CustomField>