force-app/main/default/objects/LATAM__c/fields/Client_validation_F__c.field-meta.xml
<CustomField>
    <fullName>Client_validation_F__c</fullName>
    <label>Client validation (F)</label>
    <type>Date</type>
</CustomField>