force-app/main/default/objects/LATAM__c/fields/Collocation_App_Approved_NTP_Ops_A__c.field-meta.xml
<CustomField>
    <fullName>Collocation_App_Approved_NTP_Ops_A__c</fullName>
    <label>Collocation App Approved - NTP Ops (A)</label>
    <type>Date</type>
</CustomField>