force-app/main/default/objects/LATAM__c/fields/Collocation_Application_received_A__c.field-meta.xml
<CustomField>
    <fullName>Collocation_Application_received_A__c</fullName>
    <label>Collocation Application received (A)</label>
    <type>Date</type>
</CustomField>