force-app/main/default/objects/LATAM__c/fields/Collocation_Application_Send_F__c.field-meta.xml
<CustomField>
    <fullName>Collocation_Application_Send_F__c</fullName>
    <label>Collocation Application Send (F)</label>
    <type>Date</type>
</CustomField>