force-app/main/default/objects/LATAM__c/fields/Complete_Tenant_Lease_Package_A__c.field-meta.xml
<CustomField>
    <fullName>Complete_Tenant_Lease_Package_A__c</fullName>
    <label>Complete Tenant Lease Package (A)</label>
    <type>Date</type>
</CustomField>