force-app/main/default/objects/LATAM__c/fields/Complete_Tenant_Lease_Package_F__c.field-meta.xml
<CustomField>
    <fullName>Complete_Tenant_Lease_Package_F__c</fullName>
    <label>Complete Tenant Lease Package (F)</label>
    <type>Date</type>
</CustomField>