force-app/main/default/objects/LATAM__c/fields/Construction_License_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_License_A__c</fullName>
    <label>Construction License (A)</label>
    <type>Date</type>
</CustomField>