force-app/main/default/objects/LATAM__c/fields/Construction_License_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_License_F__c</fullName>
    <label>Construction License (F)</label>
    <type>Date</type>
</CustomField>