force-app/main/default/objects/LATAM__c/fields/Construction_PO_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_PO_Ready_A__c</fullName>
    <label>Construction PO Ready (A)</label>
    <type>Date</type>
</CustomField>