force-app/main/default/objects/LATAM__c/fields/Construction_PO_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_PO_Ready_F__c</fullName>
    <label>Construction PO Ready (F)</label>
    <type>Date</type>
</CustomField>