force-app/main/default/objects/LATAM__c/fields/Construction_Ready_if_necessary_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_Ready_if_necessary_F__c</fullName>
    <label>Construction Ready (if necessary) (F)</label>
    <type>Date</type>
</CustomField>