force-app/main/default/objects/LATAM__c/fields/Construction_Schedule_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_Schedule_Ready_A__c</fullName>
    <label>Construction Schedule Ready (A)</label>
    <type>Date</type>
</CustomField>