force-app/main/default/objects/LATAM__c/fields/Construction_Schedule_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_Schedule_Ready_F__c</fullName>
    <label>Construction Schedule Ready (F)</label>
    <type>Date</type>
</CustomField>