force-app/main/default/objects/LATAM__c/fields/Construction_Start_if_necessary_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start_if_necessary_A__c</fullName>
    <label>Construction Start (if necessary) (A)</label>
    <type>Date</type>
</CustomField>