force-app/main/default/objects/LATAM__c/fields/Construction_Start_Kick_Off_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start_Kick_Off_F__c</fullName>
    <label>Construction Start Kick Off (F)</label>
    <type>Date</type>
</CustomField>