force-app/main/default/objects/LATAM__c/fields/DGAC_A__c.field-meta.xml
<CustomField>
    <fullName>DGAC_A__c</fullName>
    <label>DGAC (A)</label>
    <type>Date</type>
</CustomField>