force-app/main/default/objects/LATAM__c/fields/DGAC_F__c.field-meta.xml
<CustomField>
    <fullName>DGAC_F__c</fullName>
    <label>DGAC (F)</label>
    <type>Date</type>
</CustomField>