force-app/main/default/objects/LATAM__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <label>Difference</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>