force-app/main/default/objects/LATAM__c/fields/Document_Handover_Package_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Document_Handover_Package_Complete_A__c</fullName>
    <label>Document Handover Package Complete (A)</label>
    <type>Date</type>
</CustomField>