force-app/main/default/objects/LATAM__c/fields/Documentation_Approval_A__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Approval_A__c</fullName>
    <label>Documentation Approval (A)</label>
    <type>Date</type>
</CustomField>