force-app/main/default/objects/LATAM__c/fields/Documentation_Approval_F__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Approval_F__c</fullName>
    <label>Documentation Approval (F)</label>
    <type>Date</type>
</CustomField>