force-app/main/default/objects/LATAM__c/fields/Documentation_Delivery_A__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Delivery_A__c</fullName>
    <label>Documentation Delivery (A)</label>
    <type>Date</type>
</CustomField>