force-app/main/default/objects/LATAM__c/fields/Documentation_Delivery_F__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Delivery_F__c</fullName>
    <label>Documentation Delivery (F)</label>
    <type>Date</type>
</CustomField>