force-app/main/default/objects/LATAM__c/fields/Electrical_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Ready_A__c</fullName>
    <label>Electrical Ready (A)</label>
    <type>Date</type>
</CustomField>