force-app/main/default/objects/LATAM__c/fields/Electrical_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Ready_F__c</fullName>
    <label>Electrical Ready (F)</label>
    <type>Date</type>
</CustomField>