force-app/main/default/objects/LATAM__c/fields/Energy_Start_if_necessary_A__c.field-meta.xml
<CustomField>
    <fullName>Energy_Start_if_necessary_A__c</fullName>
    <label>Energy Start (if necessary) (A)</label>
    <type>Date</type>
</CustomField>