force-app/main/default/objects/LATAM__c/fields/Energy_Start_if_necessary_F__c.field-meta.xml
<CustomField>
    <fullName>Energy_Start_if_necessary_F__c</fullName>
    <label>Energy Start (if necessary) (F)</label>
    <type>Date</type>
</CustomField>