force-app/main/default/objects/LATAM__c/fields/Engineering_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Approved_A__c</fullName>
    <label>Engineering Approved (A)</label>
    <type>Date</type>
</CustomField>