force-app/main/default/objects/LATAM__c/fields/Engineering_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Approved_F__c</fullName>
    <label>Engineering Approved (F)</label>
    <type>Date</type>
</CustomField>