force-app/main/default/objects/LATAM__c/fields/Execution_Date_A__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date_A__c</fullName>
    <label>Execution Date (A)</label>
    <type>Date</type>
</CustomField>