force-app/main/default/objects/LATAM__c/fields/Extension_Type__c.field-meta.xml
<CustomField>
    <fullName>Extension_Type__c</fullName>
    <label>Extension Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capex</fullName>
            </value>
            <value>
                <fullName>Opex</fullName>
            </value>
            <value>
                <fullName>Capex Mejoras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>