force-app/main/default/objects/LATAM__c/fields/Final_A_Es_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Final_A_Es_Approved_F__c</fullName>
    <label>Final A&amp;Es Approved (F)</label>
    <type>Date</type>
</CustomField>