force-app/main/default/objects/LATAM__c/fields/Final_A_Es_sent_to_client_A__c.field-meta.xml
<CustomField>
    <fullName>Final_A_Es_sent_to_client_A__c</fullName>
    <label>Final A&amp;Es sent to client (A)</label>
    <type>Date</type>
</CustomField>