force-app/main/default/objects/LATAM__c/fields/Final_Volumetric_Validation__c.field-meta.xml
<CustomField>
    <fullName>Final_Volumetric_Validation__c</fullName>
    <label>Final Volumetric Validation</label>
    <type>Date</type>
</CustomField>