force-app/main/default/objects/LATAM__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <label>Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>