force-app/main/default/objects/LATAM__c/fields/Forecast_End_A__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End_A__c</fullName>
    <label>Forecast End (A)</label>
    <type>Date</type>
</CustomField>