force-app/main/default/objects/LATAM__c/fields/Forecast_End_F__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End_F__c</fullName>
    <label>Forecast End (F)</label>
    <type>Date</type>
</CustomField>