force-app/main/default/objects/LATAM__c/fields/Forecast_Start_A__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start_A__c</fullName>
    <label>Forecast Start (A)</label>
    <type>Date</type>
</CustomField>