force-app/main/default/objects/LATAM__c/fields/Forecast_Start_F__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start_F__c</fullName>
    <label>Forecast Start (F)</label>
    <type>Date</type>
</CustomField>