force-app/main/default/objects/LATAM__c/fields/Ground_Lease_A_S_signed_w_Landlord_A__c.field-meta.xml
<CustomField>
    <fullName>Ground_Lease_A_S_signed_w_Landlord_A__c</fullName>
    <label>Ground Lease A.S signed w/Landlord (A)</label>
    <type>Date</type>
</CustomField>