force-app/main/default/objects/LATAM__c/fields/Ground_Lease_In_House_A__c.field-meta.xml
<CustomField>
    <fullName>Ground_Lease_In_House_A__c</fullName>
    <label>Ground Lease In House (A)</label>
    <type>Date</type>
</CustomField>