force-app/main/default/objects/LATAM__c/fields/Ground_Lease_In_House_F__c.field-meta.xml
<CustomField>
    <fullName>Ground_Lease_In_House_F__c</fullName>
    <label>Ground Lease In House (F)</label>
    <type>Date</type>
</CustomField>