force-app/main/default/objects/LATAM__c/fields/Ground_Lease_signed_A__c.field-meta.xml
<CustomField>
    <fullName>Ground_Lease_signed_A__c</fullName>
    <label>Ground Lease signed (A)</label>
    <type>Date</type>
</CustomField>