force-app/main/default/objects/LATAM__c/fields/Ground_Rent_Validation_F__c.field-meta.xml
<CustomField>
    <fullName>Ground_Rent_Validation_F__c</fullName>
    <label>Ground Rent Validation (F)</label>
    <type>Date</type>
</CustomField>