force-app/main/default/objects/LATAM__c/fields/Grounding_Ready_A__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Ready_A__c</fullName>
    <label>Grounding Ready (A)</label>
    <type>Date</type>
</CustomField>