force-app/main/default/objects/LATAM__c/fields/Grounding_Ready_F__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Ready_F__c</fullName>
    <label>Grounding Ready (F)</label>
    <type>Date</type>
</CustomField>