force-app/main/default/objects/LATAM__c/fields/Internal_validation_A__c.field-meta.xml
<CustomField>
    <fullName>Internal_validation_A__c</fullName>
    <label>Internal validation (A)</label>
    <type>Date</type>
</CustomField>