force-app/main/default/objects/LATAM__c/fields/Internal_validation_F__c.field-meta.xml
<CustomField>
    <fullName>Internal_validation_F__c</fullName>
    <label>Internal validation (F)</label>
    <type>Date</type>
</CustomField>