force-app/main/default/objects/LATAM__c/fields/Land_Use_Zoning_A__c.field-meta.xml
<CustomField>
    <fullName>Land_Use_Zoning_A__c</fullName>
    <label>Land Use &amp; Zoning (A)</label>
    <type>Date</type>
</CustomField>