force-app/main/default/objects/LATAM__c/fields/Land_Use_Zoning_F__c.field-meta.xml
<CustomField>
    <fullName>Land_Use_Zoning_F__c</fullName>
    <label>Land Use &amp; Zoning (F)</label>
    <type>Date</type>
</CustomField>