force-app/main/default/objects/LATAM__c/fields/Landlord_Approved_if_necessary_A__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Approved_if_necessary_A__c</fullName>
    <label>Landlord Approved (if necessary) (A)</label>
    <type>Date</type>
</CustomField>