force-app/main/default/objects/LATAM__c/fields/Landlord_Approved_if_necessary_F__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Approved_if_necessary_F__c</fullName>
    <label>Landlord Approved (if necessary) (F)</label>
    <type>Date</type>
</CustomField>