force-app/main/default/objects/LATAM__c/fields/Landlord_Negotiate_Start_A__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Negotiate_Start_A__c</fullName>
    <label>Landlord Negotiate Start (A)</label>
    <type>Date</type>
</CustomField>