force-app/main/default/objects/LATAM__c/fields/Landowner_documents_complete_A__c.field-meta.xml
<CustomField>
    <fullName>Landowner_documents_complete_A__c</fullName>
    <label>Landowner documents complete (A)</label>
    <type>Date</type>
</CustomField>