force-app/main/default/objects/LATAM__c/fields/Lease_Package_Complete_notification_A__c.field-meta.xml
<CustomField>
    <fullName>Lease_Package_Complete_notification_A__c</fullName>
    <label>Lease Package Complete notification (A)</label>
    <type>Date</type>
</CustomField>