force-app/main/default/objects/LATAM__c/fields/Lease_Package_Complete_notification_F__c.field-meta.xml
<CustomField>
    <fullName>Lease_Package_Complete_notification_F__c</fullName>
    <label>Lease Package Complete notification (F)</label>
    <type>Date</type>
</CustomField>