force-app/main/default/objects/LATAM__c/fields/Lease_Package_sent_to_client_F__c.field-meta.xml
<CustomField>
    <fullName>Lease_Package_sent_to_client_F__c</fullName>
    <label>Lease Package sent to client (F)</label>
    <type>Date</type>
</CustomField>