force-app/main/default/objects/LATAM__c/fields/Make_a_Tenant_Lease_A__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Tenant_Lease_A__c</fullName>
    <label>Make a Tenant Lease (A)</label>
    <type>Date</type>
</CustomField>